fix: change ul gap to 16px

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   align-items: center;
+  justify-content: space-around;
 
 }
 
@@ -30,7 +31,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  padding: 8px;
+  margin: 8px;
 }
 
 button {
@@ -51,4 +52,5 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 8px;
+  margin: 8px;
 }
